[tool.poetry]
name = "influx-cli"
version = "0.1.0"
description = ""
authors = ["vonum <vonum.mk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
influxdb-client = "^1.38.0"
typer = {extras = ["all"], version = "^0.9.0"}
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
typer = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
